--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name="com.myapp.easywaiver.ChangeOrgActivity"></activity>
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -38,9 +38,7 @@
         </activity>
         <activity android:name="com.myapp.easywaiver.ReleaseFormActivity" />
         <activity
-            android:name="com.myapp.easywaiver.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Test" />
+            android:name="com.myapp.easywaiver.MainActivity"/>
     </application>
 
 </manifest>
