--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myapp.easywaiver"
-    android:versionCode="2"
-    android:versionName="0.1">
+    android:versionCode="4"
+    android:versionName="1.1">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <!--uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/> -->
     <supports-screens android:compatibleWidthLimitDp="320" />
 
     <application
