--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,17 +39,19 @@ android {
 
 dependencies {
 
+    def billing_version = "4.0.0"
+
+    implementation "com.android.billingclient:billing:$billing_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    //implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.preference:preference:1.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    compile 'com.github.gcacace:signature-pad:1.2.1'
+    implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.itextpdf:itext7-core:7.1.5'
 
 }
