--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myapp.easywaiver"
-    android:versionCode="5"
+    android:versionCode="6"
     android:versionName="1.2">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!--uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/> -->
     <supports-screens android:compatibleWidthLimitDp="320" />
 
     <application
+        android:name="com.myapp.easywaiver.EasyWaiveApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,13 +17,13 @@
         android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="com.myapp.easywaiver.ChangeOrgActivity"></activity>
+        <activity android:name="com.myapp.easywaiver.ChangeOrgActivity"/>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.myapp.easywaiver.provider"
             android:exported="false"
             android:grantUriPermissions="true">
-            <!-- ressource file to create -->
+            <!-- resource file to create -->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths">
