--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.itextpdf:itext7-core:7.1.5'
+    implementation 'com.github.abhishekti7:UnicornFilePicker:1.0.2'
+    implementation 'com.github.salehyarahmadi:FileAndFolderPicker:1.0.4'
 
 }
