--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,39 +7,42 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.vending.BILLING" />
+
     <supports-screens android:compatibleWidthLimitDp="320" />
 
     <application
-        android:name="com.myapp.easywaiver.EasyWaiveApplication"
+        android:name=".EasyWaiveApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="com.myapp.easywaiver.ChangeOrgActivity"/>
+        <activity android:name=".SetBannerActivity"></activity>
+        <activity android:name=".ChangeOrgActivity" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.myapp.easywaiver.provider"
             android:exported="false"
             android:grantUriPermissions="true">
+
             <!-- resource file to create -->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths">
-            </meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
-        <activity android:name="com.myapp.easywaiver.HomeActivity">
+
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.myapp.easywaiver.ReleaseFormActivity" />
-        <activity
-            android:name="com.myapp.easywaiver.MainActivity"/>
+        <activity android:name=".ReleaseFormActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
