--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ android {
 
 dependencies {
 
+    implementation files('../libs/additionnal.jar')
+    implementation files('../libs/activation.jar')
+    implementation files('../libs/mail.jar')
     def billing_version = "4.0.0"
 
     implementation "com.android.billingclient:billing:$billing_version"
@@ -68,5 +71,4 @@ dependencies {
     implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.itextpdf:itext7-core:7.1.5'
     implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
-
 }
