Disabled background button, too hard right now, might implement later

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".SetEmailActivity"></activity>
+        <activity android:name=".SetEmailActivity"/>
         <activity android:name=".SetBannerActivity" />
         <activity android:name=".ChangeOrgActivity" />
 
