--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.itextpdf:itext7-core:7.1.5'
     implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 }
