--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".SetEmailActivity"/>
-        <activity android:name=".SetBannerActivity" />
-        <activity android:name=".ChangeOrgActivity" />
+        <activity android:name=".SetEmailActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SetBannerActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ChangeOrgActivity"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -36,15 +39,18 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".HomeActivity">
+        <activity android:name=".HomeActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReleaseFormActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".ReleaseFormActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
